<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="18dp"
        android:background="#000000"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Content inside the CardView goes here -->


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="197dp"
            android:layout_height="72dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="195dp"
            android:layout_marginBottom="62dp"
            android:text="@string/title"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="344dp"
            android:layout_marginBottom="79dp"
            android:text="@string/author"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/play_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnPause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <!-- Pause Button -->
        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pause_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnStop"
            app:layout_constraintStart_toEndOf="@id/btnPlay"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <!-- Stop Button -->
        <ImageButton
            android:id="@+id/btnStop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/stop_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnPrev"
            app:layout_constraintStart_toEndOf="@id/btnPause"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <!-- Previous Button -->
        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/previous_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnStop"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
        <!-- Next Button -->
        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/next_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPrev"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:max="100"
            android:progressDrawable="@drawable/custom_seekbar_progress"
            android:thumb="@drawable/custom_seekbar_thumb"
            android:thumbTint="#F101B1"
            android:backgroundTint="@color/seekBarBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- https://www.iconfinder.com/vasabii -->